--- a/index.html
+++ b/index.html
@@ -511,8 +511,21 @@
             Without pre-training, the video prediction of GR-1 w/o Video Pre-training may not be as robust.
           </p>
         </div>
-        <img id="robot_result" width="80%" src="static/images/ablation.png">
-        
+        <!--<img id="robot_result" width="80%" src="static/images/ablation.png">-->
+        <div class="columns">
+          <div class="column has-text-left">
+              <img src="static/images/ablation_ABCD_D.png" class="interpolation-image"
+              alt="" style="display: block; margin-left: auto; margin-right: auto"/>
+          </div>
+          <div class="column has-text-left">
+              <img src="static/images/ablation_ABC_D.png" class="interpolation-image"
+            alt="" style="display: block; margin-left: auto; margin-right: auto"/>
+          </div>
+          <div class="column has-text-left">
+            <img src="static/images/ablation_10_percent_data.png" class="interpolation-image"
+          alt="" style="display: block; margin-left: auto; margin-right: auto"/>
+        </div>
+        </div>
 
         <div class="column has-text-left" style="padding-top: 25px;">
           <p>
