--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
 <section class="hero">
   <div class="hero-body">
+    <h1 style="font-size: 50px; font-weight: bold; text-align: center;">Unleashing Large-Scale Video Generative Pre-training <br> for Visual Robot Manipulation</h1>
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Unleashing Large-Scale Video Generative Pre-training for Visual Robot Manipulation</h1>
-          <div class="is-size-5 publication-authors">
+          <div class="is-size-5 publication-authors" style="padding-top: 10px;">
             <span class="author-block">
               Hongtao Wu,
             </span>
@@ -158,7 +158,6 @@
   </div>
   <div class="columns is-centered has-text-centered">
     <div class="container">
-<<<<<<< HEAD
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item unseen_cat_0">
 
