--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper</span>
+                  <span style="font-size: 22px;">Paper</span>
                 </a>
               </span>
               <!-- Arxiv Link. -->
@@ -104,7 +104,7 @@
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span style="font-size: 22px;">arXiv</span>
                 </a>
               </span>
               <!-- Code Link. -->
@@ -114,7 +114,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span style="font-size: 22px;">Code</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
@@ -124,7 +124,7 @@
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data</span>
+                  <span style="font-size: 22px;">Data</span>
                   </a>
               </span>
             </div>
