--- a/index.html
+++ b/index.html
@@ -216,7 +216,12 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
         <div class="content has-text-justified">
-          <img id="framework" width="80%" style="display: block;margin-left: auto; margin-right: auto;" src="static/images/overview.png">
+          <!--<img id="framework" width="80%" style="display: block;margin-left: auto; margin-right: auto;" src="static/images/overview_test.gif">-->
+          <video poster="" id="unseen_inst_0" autoplay muted loop playsinline>
+            <source src="static/videos/intro/overview.mp4"
+                    type="video/mp4">
+          </video>
+
           <br>
           <br>
           <p  style="font-size: 24px;">
