--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <section class="hero">
   <div class="hero-body">
-    <h1 style="font-size: 50px; font-weight: bold; text-align: center;">Unleashing Large-Scale Video Generative Pre-training <br> for Visual Robot Manipulation</h1>
+    <h1 style="font-size: 55px; font-weight: bold; text-align: center;">Unleashing Large-Scale Video Generative Pre-training <br> for Visual Robot Manipulation</h1>
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
@@ -139,19 +139,19 @@
   <div class="content has-text-justified">
     <div class="columns is-centered has-text-centered">
       <div class="container">
-        <video poster="" id="calvin_0" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%;">
+        <video poster="" id="calvin_0" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%; position: relative; left: -1%;">
           <source src="static/videos/intro/calvin_0.mp4"
                   type="video/mp4">
         </video>
-        <video poster="" id="calvin_1" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%;">
+        <video poster="" id="calvin_1" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%; ; position: relative; left: -0.5%;">
           <source src="static/videos/intro/calvin_1.mp4"
                   type="video/mp4">
         </video>
-        <video poster="" id="calvin_2" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%;">
+        <video poster="" id="calvin_2" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%; position: relative; left: 0.5%;">
           <source src="static/videos/intro/calvin_2.mp4"
                   type="video/mp4">
         </video>
-        <video poster="" id="calvin_3" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%;">
+        <video poster="" id="calvin_3" autoplay controls muted loop playsinline width="24%" style="border-radius: 4%; ; position: relative; left: 1%;">
           <source src="static/videos/intro/calvin_3.mp4"
                   type="video/mp4">
         </video>
